@@ -1,197 +1,195 @@
 package org.cdpg.dx.common.request;
 
-import io.vertx.core.MultiMap;
-import java.util.*;
+import io.vertx.ext.web.RoutingContext;
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.cdpg.dx.common.exception.DxBadRequestException;
 import org.cdpg.dx.database.postgres.models.OrderBy;
 
+import java.util.*;
+
 public class PaginationRequestBuilder {
+
   private static final Logger LOGGER = LogManager.getLogger(PaginationRequestBuilder.class);
 
-  public static PaginatedRequest fromRoutingContext(PaginationRequestConfig config) {
-    MultiMap params = config.getCtx().request().params(true);
-    LOGGER.debug("Starting to build PaginatedRequest with parameters: {}", params);
+  private final RoutingContext ctx;
+  private Map<String, String> allowedFiltersDbMap = Collections.emptyMap();
+  private Map<String, Object> additionalFilters = Collections.emptyMap();
+  private Set<String> allowedTimeFields = Collections.emptySet();
+  private String defaultTimeField = null;
+  private Set<String> allowedSortFields = Collections.emptySet();
+  private String defaultSortBy = null;
+  private String defaultOrder = "desc";
 
-    int page = parsePage(params);
-    int size = parseSize(params);
-    LOGGER.debug("Parsed pagination parameters - page: {}, size: {}", page, size);
-
-    Map<String, String> filters = extractFilters(params, config);
-    LOGGER.debug("Extracted filters: {}", filters);
-
-    List<TemporalRequest> temporalRequests = getTemporalRequests(params, config);
-    LOGGER.debug("Extracted temporal requests: {}", temporalRequests);
-
-    List<OrderBy> orderByList = getSortOrders(params, config);
-    LOGGER.debug("Extracted order by list: {}", orderByList);
-
-    PaginatedRequest request =
-        new PaginatedRequest(page, size, filters, temporalRequests, orderByList);
-    LOGGER.debug("PaginatedRequest successfully built: {}", request);
-    return request;
+  private PaginationRequestBuilder(RoutingContext ctx) {
+    this.ctx = ctx;
   }
 
-  private static int parsePage(MultiMap params) {
-    int page = parseIntOrDefault(params.getAll("page"), 1);
-    LOGGER.debug("parsePage(): Using page number {}", page);
-    return page;
+  public static PaginationRequestBuilder from(RoutingContext ctx) {
+    return new PaginationRequestBuilder(ctx);
   }
 
-  private static int parseSize(MultiMap params) {
-    int size = parseIntOrDefault(params.getAll("size"), 1000);
-    LOGGER.debug("parseSize(): Using page size {}", size);
-    return size;
+  public PaginationRequestBuilder allowedFiltersDbMap(Map<String, String> allowedFiltersDbMap) {
+    this.allowedFiltersDbMap = allowedFiltersDbMap != null ? allowedFiltersDbMap : Collections.emptyMap();
+    return this;
   }
 
-  private static Map<String, String> extractFilters(
-      MultiMap params, PaginationRequestConfig config) {
-    Map<String, String> rawFilters = new HashMap<>();
-    for (String key : config.getAllowedFilterKeys()) {
-      List<String> values = params.getAll(key);
-      if (!values.isEmpty()) {
-        rawFilters.put(key, values.get(0));
-        LOGGER.debug("Filter found - key: {}, value: {}", key, values.get(0));
-      }
-    }
-    Map<String, String> mapped = FilterMapper.mapFilters(rawFilters, config.getApiToDbMap());
-    if (config.getAdditionalFilters() != null) {
-      LOGGER.debug("Adding additional filters: {}", config.getAdditionalFilters());
-      mapped.putAll(config.getAdditionalFilters());
-    }
-    LOGGER.debug("Mapped filters after transformation: {}", mapped);
-    return mapped;
+  public PaginationRequestBuilder additionalFilters(Map<String, Object> additionalFilters) {
+    this.additionalFilters = additionalFilters != null ? additionalFilters : Collections.emptyMap();
+    return this;
   }
 
-  private static List<TemporalRequest> getTemporalRequests(
-      MultiMap params, PaginationRequestConfig config) {
-    List<TemporalRequest> list = new ArrayList<>();
+  public PaginationRequestBuilder allowedTimeFields(Set<String> allowedTimeFields) {
+    this.allowedTimeFields = allowedTimeFields != null ? allowedTimeFields : Collections.emptySet();
+    return this;
+  }
 
-    String time = firstParam(params, "time");
-    String endtime = firstParam(params, "endtime");
-    String timeRel = firstParam(params, "timerel");
+  public PaginationRequestBuilder defaultTimeField(String defaultTimeField) {
+    this.defaultTimeField = defaultTimeField;
+    return this;
+  }
 
-    if (endtime != null && time == null) {
-      LOGGER.warn("Parameter 'endtime' provided without 'time'");
-      throw new DxBadRequestException("Parameter 'endtime' cannot be used without 'time'.");
+  public PaginationRequestBuilder allowedSortFields(Set<String> allowedSortFields) {
+    this.allowedSortFields = allowedSortFields != null ? allowedSortFields : Collections.emptySet();
+    return this;
+  }
+
+  public PaginationRequestBuilder defaultSort(String field, String order) {
+    this.defaultSortBy = field;
+    if(order != null) {
+      this.defaultOrder = order;
     }
-    if (time != null && timeRel == null) {
-      LOGGER.warn("Parameter 'timerel' missing when 'time' is provided");
-      throw new DxBadRequestException(
-          "Parameter 'timerel' is required when 'temporal query' is provided.");
-    }
-    if (timeRel != null) {
-      TemporalRequest tr =
-          TemporalRequestHelper.buildTemporalRequest(
-              config.getDefaultTimeField(), timeRel, time, endtime);
-      if (tr != null) {
-        LOGGER.debug(
-            "Adding temporal request for default field '{}': {}", config.getDefaultTimeField(), tr);
-        list.add(tr);
-      } else {
-        LOGGER.warn("TemporalRequestHelper returned null for default temporal request");
+    return this;
+  }
+
+  public PaginatedRequest build() {
+    Set<String> allowedKeys = getAllowedQueryParams();
+
+    for (String param : ctx.queryParams().names()) {
+      if (!allowedKeys.contains(param)) {
+        throw new DxBadRequestException("Invalid query parameter: " + param);
       }
     }
 
-    for (String timeField : config.getAllowedTimeFields()) {
-      String t = firstParam(params, timeField + "_time");
-      String et = firstParam(params, timeField + "_endtime");
-      String trl = firstParam(params, timeField + "_timerel");
+    int page = parseIntOrDefault(ctx.queryParam("page"), 1);
+    int size = parseIntOrDefault(ctx.queryParam("size"), 1000);
 
+    Map<String, Object> mappedFilters = new HashMap<>();
+
+    allowedFiltersDbMap.forEach((apiParam, dbField) -> {
+      String value = getFirstQueryParam(apiParam);
+      if (value != null) {
+        mappedFilters.put(dbField, value);
+      }
+    });
+
+    if (additionalFilters != null && !additionalFilters.isEmpty()) {
+      mappedFilters.putAll(additionalFilters);
+    }
+
+
+    List<TemporalRequest> temporalRequests = extractTemporalRequests();
+    List<OrderBy> orderByList = extractSortOrders();
+
+    LOGGER.debug("Pagination built with page: {}, size: {}, filters: {}, temporal: {}, sort: {}",
+            page, size, mappedFilters, temporalRequests, orderByList);
+
+    return new PaginatedRequest(page, size, mappedFilters, temporalRequests, orderByList);
+  }
+
+  private List<TemporalRequest> extractTemporalRequests() {
+    List<TemporalRequest> temporalRequests = new ArrayList<>();
+    if (defaultTimeField != null) {
+      String time = getFirstQueryParam("time");
+      String endtime = getFirstQueryParam("endtime");
+      String timerel = getFirstQueryParam("timerel");
+
+      if (endtime != null && time == null) {
+        throw new DxBadRequestException("Parameter 'endtime' cannot be used without 'time'.");
+      }
+      if (time != null && timerel == null) {
+        throw new DxBadRequestException("Parameter 'timerel' is required when 'temporal query' is provided.");
+      }
+      if (timerel != null) {
+        TemporalRequest tr = TemporalRequestHelper.buildTemporalRequest(defaultTimeField, timerel, time, endtime);
+        if (tr != null) temporalRequests.add(tr);
+      }
+    }
+
+    for (String timeField : allowedTimeFields) {
+      String t = getFirstQueryParam(timeField + "_time");
+      String et = getFirstQueryParam(timeField + "_endtime");
+      String trl = getFirstQueryParam(timeField + "_timerel");
       if (trl != null) {
         TemporalRequest tr = TemporalRequestHelper.buildTemporalRequest(timeField, trl, t, et);
-        if (tr != null) {
-          LOGGER.debug("Adding temporal request for field '{}': {}", timeField, tr);
-          list.add(tr);
-        } else {
-          LOGGER.warn(
-              "TemporalRequestHelper returned null for temporal request with field '{}'",
-              timeField);
-        }
+        if (tr != null) temporalRequests.add(tr);
       }
     }
-
-    return list;
+    return temporalRequests;
   }
 
-  private static List<OrderBy> getSortOrders(MultiMap params, PaginationRequestConfig config) {
+  private List<OrderBy> extractSortOrders() {
     List<OrderBy> orderByList = new ArrayList<>();
-    String sort = firstParam(params, "sort");
+    String sortParam = getFirstQueryParam("sort");
     final int MAX_SORT_FIELDS = 3;
 
-    LOGGER.debug("Extracting sort orders from parameter: {}", sort);
-
-    if (sort != null && !sort.isEmpty()) {
-      String[] sortItems = sort.split(";");
-      if (sortItems.length > MAX_SORT_FIELDS) {
-        LOGGER.debug(
-            "Too many sort fields: {} provided, max allowed is {}",
-            sortItems.length,
-            MAX_SORT_FIELDS);
+    if (sortParam != null && !sortParam.isEmpty()) {
+      String[] items = sortParam.split(";");
+      if (items.length > MAX_SORT_FIELDS) {
         throw new DxBadRequestException("Too many sort fields. Max allowed is " + MAX_SORT_FIELDS);
       }
-
-      for (String item : sortItems) {
+      for (String item : items) {
         String[] parts = item.split(":");
         if (parts.length != 2) {
-          LOGGER.warn("Invalid sort format detected: '{}'. Expected 'field:order'", item);
-          throw new DxBadRequestException(
-              "Invalid sort format: " + item + ". Expected field:order");
+          throw new DxBadRequestException("Invalid sort format: " + item + ". Expected field:order");
         }
-
         String field = parts[0].trim();
         String direction = parts[1].trim().toLowerCase();
 
-        LOGGER.debug("Processing sort field: '{}', direction: '{}'", field, direction);
-
-        if (!config.getAllowedSortFields().contains(field)) {
-          LOGGER.warn("Invalid sort field encountered: '{}'", field);
+        if (!allowedSortFields.contains(field)) {
           throw new DxBadRequestException("Invalid sort field: " + field);
         }
         if (!direction.equals("asc") && !direction.equals("desc")) {
-          LOGGER.warn("Invalid sort order encountered: '{}'. Must be 'asc' or 'desc'", direction);
           throw new DxBadRequestException("Invalid sort order: " + direction);
         }
 
-        String dbField = config.getApiToDbMap().get(field);
-        LOGGER.debug("Mapping API sort field '{}' to DB field '{}'", field, dbField);
-
-        OrderBy orderBy = new OrderBy(dbField, OrderBy.Direction.valueOf(direction.toUpperCase()));
-        LOGGER.debug("Adding sort order: {}", orderBy);
-        orderByList.add(orderBy);
+        OrderBy order = new OrderBy(field, OrderBy.Direction.valueOf(direction.toUpperCase()));
+        orderByList.add(order);
       }
-    } else {
-      LOGGER.warn("No sort parameter provided so that using default sort order");
-      OrderBy defaultOrder =
-          new OrderBy(
-              config.getDefaultSortBy(),
-              OrderBy.Direction.valueOf(config.getDefaultOrder().toUpperCase()));
-      orderByList.add(defaultOrder);
+    } else if (defaultSortBy != null) {
+      orderByList.add(new OrderBy(defaultSortBy, OrderBy.Direction.valueOf(defaultOrder.toUpperCase())));
     }
-
     return orderByList;
   }
 
-  private static int parseIntOrDefault(List<String> values, int defaultValue) {
-    if (values == null || values.isEmpty()) {
-      LOGGER.debug("Parameter missing, using default value: {}", defaultValue);
-      return defaultValue;
+  private Set<String> getAllowedQueryParams() {
+    Set<String> allowedKeys = new HashSet<>(allowedFiltersDbMap.keySet());
+    allowedKeys.add("page");
+    allowedKeys.add("size");
+    allowedKeys.add("time");
+    allowedKeys.add("endtime");
+    allowedKeys.add("timerel");
+
+    for (String timeField : allowedTimeFields) {
+      allowedKeys.add(timeField + "_time");
+      allowedKeys.add(timeField + "_endtime");
+      allowedKeys.add(timeField + "_timerel");
     }
+    allowedKeys.add("sort");
+    return allowedKeys;
+  }
+
+  private static int parseIntOrDefault(List<String> values, int defaultValue) {
+    if (values == null || values.isEmpty()) return defaultValue;
     try {
-      int parsed = Integer.parseInt(values.getFirst());
-      LOGGER.debug("Parsed integer parameter value: {}", parsed);
-      return parsed;
+      return Integer.parseInt(values.get(0));
     } catch (NumberFormatException e) {
-      LOGGER.warn(
-          "Failed to parse int from value '{}', using default {}", values.get(0), defaultValue);
       return defaultValue;
     }
   }
 
-  // Helper to get first value of param or null
-  private static String firstParam(MultiMap params, String key) {
-    List<String> values = params.getAll(key);
-    return values.isEmpty() ? null : values.getFirst();
+  private String getFirstQueryParam(String paramName) {
+    List<String> values = ctx.queryParam(paramName);
+    return (values != null && !values.isEmpty()) ? values.get(0) : null;
   }
 }
